   and trying to reserve resources. (#1152)
 * Fix renewal at many aggregates (#1155)
 * Fix typo in user.php `getInsideKeys`: `INSICE` should be `INSIDE`. (#1157)
 * Fix WiMAX auto-adding a new lead to their group, to use the real user
   object if the new lead is the current user. (#1158)
 * Add breadcrumbs to the Edit SSH Key page. (#1161)

== 2.18.1 ==
 * When displaying a stitching RSpec, do not filter results by AM. (#1130)
 * Show the text of any Omni or Stitching error coming
   in stderr to the user to explain any failure. (#1131)

== 2.18 ==
 * Add Resources: changing RSpec resets AM (#1108)
 * Add Stitching Allocate Resources Interface (#581)
   * Use stitcher to do all Omni calls, including adding a new
   `stitcher_php` to invoke it.
   * Refactor `slice-add-resources` to use a table for display
   * Disable `Reserve Resources` until you pick an RSpec
   * Include `Manage RSpecs` as a tab on the `Add Resources`
     page. (#412)
   * Add searching and sorting to `Manage RSpecs` (#228, #467)
 * Warn that the Raw status link refetches status. (#764)
 * Mention 'manifest' and 'xml' on Details page. (#475)
 * Cleanly redirect to the referer on the KM activate page,
   avoiding attempting to construct a relative URL from an
   absolute URL. Additionally, check the path when constructing
   a relative URL to make sure we construct something 
   relative. (#1110)
 * Explain what RSpec name and description are. (#420)
 * Link to the GENI Glossary to explain project and slice roles. (#558)
 * Change subject on project join request email (fix grammar). (#1083)
 * Warn on missing slice name to createslice. (#1028)
 * Allow specifying the "site" for GENI Desktop (stable vs ....). (#1113)
 * Add various DB constraints (not null, unique, foreign key, primary key)
   so that the database enforces known relationships. (#943)
   Additionally, index sa_slice_member(slice_id),
   pa_project_member(project_id), pa_project_member(member_id)