@@ -113,7 +113,7 @@ if (isset($requestee) && ! is_null($requestee) && (!isset($error) || is_null($er
   // Send the email
   $email = $user->email();
   $name = $user->prettyName();
-  $headers = "Reply-To: $email" . "\r\n" . "From: \"$name (via the GENI Portal)\" <www-data@gpolab.bbn.com>";
+  $headers = "Reply-To: $email" . "\r\n" . "From: \"$name (via the GENI Portal)\" <www-data@gpolab.bbn.com>\r\nContent-Type: text/plain; charset=UTF-8\r\nContent-Transfer-Encoding: 8bit";
 
   mail($requestee,
        "Please create me a GENI Project",
