@@ -89,7 +89,7 @@ if (isset($invitees) && ! is_null($invitees) && (!isset($error) || is_null($erro
   $email = $user->email();
   $name = $user->prettyName();
 
-  $headers = "Reply-To: $email" . "\r\n" . "From: \"$name (via the GENI Portal)\" <www-data@gpolab.bbn.com>";
+  $headers = "Reply-To: $email" . "\r\n" . "From: \"$name (via the GENI Portal)\" <www-data@gpolab.bbn.com>\r\nContent-Type: text/plain; charset=UTF-8\r\nContent-Transfer-Encoding: 8bit";
   mail($to,
        "Join GENI!",
        $message,
