@@ -463,9 +463,10 @@ function send_attribute_fail_email()
   foreach ($array as $var => $value) {
     $body .= "$var = $value\n";
   }
+  $headers = "Content-Type: text/plain; charset=UTF-8\r\nContent-Transfer-Encoding: 8bit";
   mail($portal_admin_email,
           "Portal access failure on $server_host",
-       $body);
+       $body, $headers);
 }
 
 function geni_load_user_by_eppn($eppn, $sfcred)
